total rework of project: russian translation added; view and handlers reworked

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,15 +1,17 @@
 { 
-  "feedback": {
-    "successfulRSSDownload": "RSS successfully downloaded!"
+  "messages": {
+    "success": "RSS successfully downloaded!"
   },
   "headers": {
     "posts": "Posts",
     "feeds": "Feeds"
   },
   "errors": {
-    "invalidURL": "Invalid URL",
-    "duplicateURL": "This URL already exists",
-    "invalidRSS": "This URL does not contain valid RSS"
+    "emptyUrl": "This field must not be empty",
+    "invalidUrl": "Invalid URL",
+    "duplicateUrl": "This URL already exists",
+    "invalidRss": "This URL does not contain valid RSS",
+    "networkError": "Network Error"
   },
   "buttons": {
     "look": "Look",
